name:           HGraphStorage
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         JP Moresmau <jp@moresmau.fr>
maintainer:     JP Moresmau <jp@moresmau.fr>
stability:      experimental
category:       Database
homepage:       https://github.com/JPMoresmau/dbIDE/tree/master/HGraphStorage
synopsis:       Graph database stored on disk
description:    A graph database storing its data on disk.
copyright:      JP Moresmau 2014
license:        BSD3
license-file:   LICENSE

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   binary,
                   filepath,
                   directory,
                   bytestring,
                   text,
                   data-default,
                   containers,
                   lifted-base,
                   transformers-base,
                   transformers,
                   monad-control,
                   monad-logger,
                   resourcet
  ghc-options:     -Wall
  other-modules:   Database.Graph.HGraphStorage.Constants
  exposed-modules: 
                   Database.Graph.HGraphStorage.FileOps,
                   Database.Graph.HGraphStorage.API,
                   Database.Graph.HGraphStorage.Types,
                   Database.Graph.HGraphStorage.Query

executable HGraphStorage
  hs-source-dirs:  exe
  main-is:         Main.hs
  build-depends:   
                   base >= 4, HGraphStorage, binary,
                   filepath,
                   directory,
                   bytestring,
                   text,
                   data-default,
                   containers,
                   lifted-base,
                   transformers-base,
                   transformers,
                   monad-control,
                   monad-logger,
                   resourcet
  ghc-options:     -Wall

source-repository head
  type:      git
  location:  https://github.com/JPMoresmau/dbIDE.git
