name:           HGraphStorage
version:        0.0.3
cabal-version:  >= 1.8
build-type:     Simple
author:         JP Moresmau <jp@moresmau.fr>
maintainer:     JP Moresmau <jp@moresmau.fr>
stability:      experimental
category:       Database
homepage:       https://github.com/JPMoresmau/HGraphStorage
synopsis:       Graph database stored on disk
description:    
                A graph database storing its data on disk.
                There is currently no transaction or even concurrent access support, this is not made for production.
                We try to store the data on disk efficiently, i.e. not rely on having the data in memory.
                There is a test suite and a benchmark, which would be the best way to get a feel for how the library works.
copyright:      JP Moresmau 2014-2015
license:        BSD3
license-file:   LICENSE

library
  hs-source-dirs:   src
  build-depends:    
                   base >= 4 && < 5,
                   binary,
                   filepath,
                   directory,
                   bytestring,
                   text,
                   data-default,
                   containers,
                   lifted-base,
                   transformers-base,
                   transformers,
                   monad-control >= 1.0,
                   monad-logger,
                   resourcet
  ghc-options:      -Wall
  other-modules:    Database.Graph.HGraphStorage.Constants
  exposed-modules:  
                   Database.Graph.HGraphStorage.FileOps,
                   Database.Graph.HGraphStorage.API,
                   Database.Graph.HGraphStorage.Types,
                   Database.Graph.HGraphStorage.Query,
                   Database.Graph.HGraphStorage.FreeList,
                   Database.Graph.HGraphStorage.Index

--executable HGraphStorage
--  hs-source-dirs:  exe
--  main-is:         Main.hs
--  build-depends:   
--                   base >= 4, HGraphStorage, binary,
--                   filepath,
--                   directory,
--                   bytestring,
--                   text,
--                   data-default,
--                   containers,
--                   lifted-base,
--                   transformers-base,
--                   transformers,
--                   monad-control,
--                   monad-logger,
--                   resourcet
--  ghc-options:     -Wall

source-repository head
  type:      git
  location:  https://github.com/JPMoresmau/HGraphStorage.git

test-suite hgraphstorage-test
  type:            exitcode-stdio-1.0
  main-is:         hgraphstorage-test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base  >= 4 && < 5,
                    HGraphStorage,
                   tasty > 0.10,
                   tasty-hunit,
                   HUnit,
                   tasty-quickcheck,
                   QuickCheck,
                   filepath,
                   directory,
                   bytestring,
                   text,
                   data-default,
                   containers,
                   lifted-base,
                   transformers-base,
                   transformers,
                   monad-control >= 1.0,
                   monad-logger,
                   resourcet
  other-modules:   
                  Database.Graph.HGraphStorage.APITest,
                  Database.Graph.HGraphStorage.QueryTest,
                  Database.Graph.HGraphStorage.Utils,
                  Database.Graph.HGraphStorage.FreeListTest,
                  Database.Graph.HGraphStorage.IndexTest
  hs-source-dirs:  test

benchmark HGraphStorage-bench
  type:            exitcode-stdio-1.0
  build-depends:   
                   base  >= 4 && < 5,
                   HGraphStorage,
                   bytestring,
                   zlib ,
                   tar,
                   directory,
                   filepath,
                   Cabal,
                   containers,
                   monad-logger,
                   resourcet,
                   text,
                   criterion,
                   bytestring,
                   binary,
                   text-binary,
                   data-default,
                   transformers
  hs-source-dirs:  perf
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs
  other-modules:   Database.Graph.HGraphStorage.HackageTest

