name: LowLevelDB
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved

library
    exposed-modules:
        Database.LowLevelDB.MMapHandle
        Database.LowLevelDB.Trie
    build-depends:
        base >=4 && <5,
        mmap -any,
        bytestring -any,
        filepath -any,
        directory -any,
        data-default -any,
        binary -any
    hs-source-dirs: src
    ghc-options: -Wall

test-suite test-LowLevelDB
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        QuickCheck -any,
        quickcheck-instances -any,
        base -any,
        hspec -any,
        base -any,
        mmap -any,
        bytestring -any,
        filepath -any,
        directory -any,
        async -any,
        data-default -any,
        binary -any,
        text
    default-language: Haskell2010
    hs-source-dirs: test src
    other-modules:
        Database.LowLevelDB.MMapHandle
        Database.LowLevelDB.MMapHandleSpec
        Database.LowLevelDB.Trie
        Database.LowLevelDB.TestUtils
        Database.LowLevelDB.TrieSpec
    ghc-options: -ferror-spans -Wall
