name: LowLevelDB
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: JP Moresmau 2016
maintainer: JP Moresmau <jp@moresmau.fr>
stability: experimental
homepage: https://github.com/JPMoresmau/HGraphStorage/LowLevelDB
synopsis: Low level database disk structures
category: Database
author: JP Moresmau <jp@moresmau.fr>

library
    exposed-modules:
        Database.LowLevelDB.Conversions
        Database.LowLevelDB.MMapHandle
        Database.LowLevelDB.Trie
        Database.LowLevelDB.FreeList
        Database.LowLevelDB.MVCC
    build-depends:
        base >=4 && <5,
        mmap -any,
        bytestring -any,
        filepath -any,
        directory -any,
        data-default -any,
        binary -any,
        storable-record -any,
        transformers -any,
        containers -any,
        mtl -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

test-suite test-LowLevelDB
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        QuickCheck -any,
        quickcheck-instances -any,
        base -any,
        hspec -any,
        base -any,
        mmap -any,
        bytestring -any,
        filepath -any,
        directory -any,
        async -any,
        data-default -any,
        binary -any,
        text -any,
        storable-record -any,
        transformers -any,
        containers -any,
        mtl -any
    default-language: Haskell2010
    hs-source-dirs: test src
    other-modules:
        Database.LowLevelDB.Conversions
        Database.LowLevelDB.ConversionsSpec
        Database.LowLevelDB.FreeList
        Database.LowLevelDB.FreeListSpec
        Database.LowLevelDB.MMapHandle
        Database.LowLevelDB.MMapHandleSpec
        Database.LowLevelDB.MVCC
        Database.LowLevelDB.MVCCSpec
        Database.LowLevelDB.Trie
        Database.LowLevelDB.TestUtils
        Database.LowLevelDB.TrieSpec
    ghc-options: -ferror-spans -Wall

benchmark bench-LowLevelDB
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base >=4 && <5,
        LowLevelDB -any,
        criterion -any,
        mmap -any,
        bytestring -any,
        filepath -any,
        directory -any,
        data-default -any,
        binary -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: perf
    other-modules:
        Database.LowLevelDB.TrieBench
    ghc-options: -fprof-auto -Wall -ferror-spans -threaded -rtsopts -with-rtsopts=-N2
